# bot_shopee

./: .env.example  .gitignore  CLAUDE.md  DOCS_EVOLUTION.md  EXEMPLOS_USO.md  MCP_SERVER.md  README.md  docs.md  mcp_server.py  pyproject.toml  requirements.txt  requirements_lock.txt
.claude/: settings.local.json
.claude/skills/: api-search.md  check-env.md  git-status.md  short-link.md  test.md
.github/workflows/: tests.yml
scripts/: shopee.sh  shopee_api.py
tests/: README_ORCHESTRATOR.md  monitoring.py  orchestrator.py  test_shopee_api.py
