[project]
name = "shopee-mcp-server"
version = "1.0.0"
description = "MCP Server para API de Afiliados da Shopee Brasil"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.2.0",
    "mcp>=0.9.0",
]
authors = [
    {name = "Gabriel Ramos", email = "gabriel@ramos.dev"}
]
license = {text = "MIT"}
keywords = ["shopee", "affiliate", "api", "mcp", "graphql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
shopee-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
